--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <title>Blazor-Dashboard</title>
+    <title>BLAZOR DASHBOARD</title>
     <base href="/" />
-    <!--
-    -->
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css" />
     <link href="css/site.css" rel="stylesheet" />
+
     <!--
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     -->
+
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -28,5 +26,29 @@
     <app>Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+
+        function LaunchSideBar() {
+            ev = window.event;
+            ev.stopPropagation();
+            ev.preventDefault();
+            var container = document.getElementById('sidebar-main-container');
+            container.className = 'sidebar-main-container';
+            container.classList.add('sidebar-nav-open');
+            setTimeout(function () {
+                document.addEventListener('click', HideSideBar);
+            }, 25);
+        }
+
+        function HideSideBar() {
+            ev = window.event;
+            ev.stopPropagation();
+            ev.preventDefault();
+            document.getElementById('sidebar-main-container').classList.remove('sidebar-nav-open');
+            document.removeEventListener('click', HideSideBar);
+        }
+        
+
+    </script>
 </body>
 </html>
