--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -47,6 +47,10 @@
             document.getElementById('sidebar-main-container').classList.remove('sidebar-nav-open');
             document.removeEventListener('click', HideSideBar);
         }
+
+        function SayHello() {
+            alert("Hello");
+        }
         
 
     </script>
