--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -27,25 +27,44 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script>
+        var stopEvents = new Boolean("false");
 
         function LaunchSideBar() {
+            if (stopEvents)
+                return;
             ev = window.event;
             ev.stopPropagation();
-            ev.preventDefault();
+            ev.preventDefault();   
+            //document.getElementById('sidebar-main-container').style.zIndex = "3";
+            document.getElementById('nav-menu').style.marginTop = (window.scrollY-5) + "px";
             var container = document.getElementById('sidebar-main-container');
             container.className = 'sidebar-main-container';
             container.classList.add('sidebar-nav-open');
             setTimeout(function () {
                 document.addEventListener('click', HideSideBar);
             }, 25);
+            stopEvents = true;
         }
 
         function HideSideBar() {
             ev = window.event;
             ev.stopPropagation();
             ev.preventDefault();
+            //document.getElementById('sidebar-main-container').style.zIndex = "1";
             document.getElementById('sidebar-main-container').classList.remove('sidebar-nav-open');
             document.removeEventListener('click', HideSideBar);
+            stopEvents = false;
+        }
+
+        window.onresize = function (event) {
+            HideSideBar();
+        };
+
+        window.onscroll = function () { scrollSlideInSideBar() };
+
+        function scrollSlideInSideBar() {
+            document.getElementById('nav-menu').style.marginTop = (window.scrollY - 5) + "px";
+
         }
 
         function SayHello() {
