--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -41,6 +41,9 @@
             ev.preventDefault();
             //document.getElementById('sidebar-main-container').style.zIndex = "3";
             document.getElementById('nav-menu').style.marginTop = (window.scrollY - 5) + "px";
+            document.getElementById('inner-nav-menu').style.height = (window.innerHeight) + "px";
+            //document.getElementById('nav-menu').style.height = (window.height + 50) + "px";;
+
             var container = document.getElementById('sidebar-main-container');
             container.className = 'sidebar-main-container';
             container.classList.add('sidebar-nav-open');
@@ -75,7 +78,26 @@
 
         window.onresize = function (event) {
             HideSideBar();
+            /*
+            if (window.innerWidth < 992) {
+                if (document.getElementById('top-bar').classList.contains("top-rowx")) {
+                    DotNet.invokeMethodAsync('Blazor-Dashboard', 'HideTopBar');
+                    document.getElementById('top-bar').classList.remove('top-rowx');
+                    document.getElementById('top-bar').classList.add('top-rowx-blank');
+                }
+                else {
+                    //DotNet.invokeMethodAsync('Blazor-Dashboard', 'ShowTopBar');
+                    //document.getElementById('top-bar').classList.remove('top-rowx-blank');
+                    //document.getElementById('top-bar').classList.add('top-rowx');
+                }
+            }
+            else {
+                DotNet.invokeMethodAsync('Blazor-Dashboard', 'ShowTopBar');
+                document.getElementById('top-bar').classList.remove('top-rowx-blank');
+                document.getElementById('top-bar').classList.add('top-rowx');
 
+            }
+            */
         };
 
         window.onscroll = function () { scrollSlideInSideBar() };
