Blazor 0.8 and Grid Rendering

--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -25,7 +25,7 @@
 <body>
     <app>Loading...</app>
 
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/components.webassembly.js"></script>
     <script>
         var stopEvents = new Boolean("false");
         function init() {
