--- a/Blazor-Dashboardv0.1/wwwroot/index.html
+++ b/Blazor-Dashboardv0.1/wwwroot/index.html
@@ -1,33 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
     <title>BLAZOR DASHBOARD</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="css/sitex.css" rel="stylesheet" />
-    <link href="css/sidebar.css"  rel="stylesheet" />
 
+    <!--
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    -->
+
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <link href="_content/DonutChart/styles.css" rel="stylesheet" />
 
 </head>
 <body>
     <app>Loading...</app>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="_framework/blazor.webassembly.js"></script>
-
-
+    <script src="_framework/components.webassembly.js"></script>
     <script>
         var stopEvents = new Boolean("false");
         function init() {
@@ -115,7 +113,5 @@
         
 
     </script>
-
-
 </body>
 </html>
