--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -15,6 +15,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <link href="_content/DonutChart/styles.css" rel="stylesheet" />
+    <link href="_content/PieChart/styles.css" rel="stylesheet" />
+    <link href="_content/HorizontalBarChart/styles.css" rel="stylesheet" />
+    <link href="_content/LineChart/styles.css" rel="stylesheet" />
 
 </head>
 <body>
