Vertical Bar Chart update

--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -17,6 +17,7 @@
     <link href="_content/DonutChart/styles.css" rel="stylesheet" />
     <link href="_content/PieChart/styles.css" rel="stylesheet" />
     <link href="_content/HorizontalBarChart/styles.css" rel="stylesheet" />
+    <link href="_content/VerticalBarChart/styles.css" rel="stylesheet" />
     <link href="_content/LineChart/styles.css" rel="stylesheet" />
 
 </head>
