--- a/Blazor-Dashboard/wwwroot/indexy.html
+++ b/Blazor-Dashboard/wwwroot/indexy.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width">
-    <title>BLAZOR DASHBOARD</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>testproject</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
 
-    <link href="css/sitez.css" rel="stylesheet" />
-    <link href="css/sidebarz.css"  rel="stylesheet" />
-
+    <link href="css/sitey.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -19,8 +18,9 @@
     <link href="_content/HorizontalBarChart/styles.css" rel="stylesheet" />
     <link href="_content/VerticalBarChart/styles.css" rel="stylesheet" />
     <link href="_content/LineChart/styles.css" rel="stylesheet" />
-
+    
 </head>
+
 <body>
     <app>Loading...</app>
 
@@ -29,8 +29,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
     <script src="_framework/blazor.webassembly.js"></script>
-
 </body>
+
 </html>
