--- a/Blazor-Dashboard/wwwroot/index.html
+++ b/Blazor-Dashboard/wwwroot/index.html
@@ -19,6 +19,7 @@
     <link href="_content/HorizontalBarChart/styles.css" rel="stylesheet" />
     <link href="_content/VerticalBarChart/styles.css" rel="stylesheet" />
     <link href="_content/LineChart/styles.css" rel="stylesheet" />
+    <link href="_content/Blazor-Sparkline/styles.css" rel="stylesheet" />
 
 </head>
 <body>
