--- a/Blazor-Dashboard/wwwroot/indexz.html
+++ b/Blazor-Dashboard/wwwroot/indexz.html
@@ -20,6 +20,8 @@
     <link href="_content/VerticalBarChart/styles.css" rel="stylesheet" />
     <link href="_content/LineChart/styles.css" rel="stylesheet" />
 
+    <link href="_content/Sparkline/styles.css" rel="stylesheet" />
+
 </head>
 <body>
     <app>Loading...</app>
