--- a/Blazor-Dashboard/wwwroot/indexz.html
+++ b/Blazor-Dashboard/wwwroot/indexz.html
@@ -22,6 +22,9 @@
 
     <link href="_content/Sparklines/styles.css" rel="stylesheet" />
     <link href="_content/ColumnBars/styles.css" rel="stylesheet" />
+    <link href="_content/MiniPie/styles.css" rel="stylesheet" />
+    <link href="_content/WinLoss/styles.css" rel="stylesheet" />
+    <link href="_content/BulletBars/styles.css" rel="stylesheet" />
 
 </head>
 <body>
