--- a/Blazor-Dashboard/wwwroot/indexy.html
+++ b/Blazor-Dashboard/wwwroot/indexy.html
@@ -19,6 +19,12 @@
     <link href="_content/VerticalBarChart/styles.css" rel="stylesheet" />
     <link href="_content/LineChart/styles.css" rel="stylesheet" />
     
+    <link href="_content/Sparklines/styles.css" rel="stylesheet" />
+    <link href="_content/ColumnBars/styles.css" rel="stylesheet" />
+    <link href="_content/MiniPie/styles.css" rel="stylesheet" />
+    <link href="_content/WinLoss/styles.css" rel="stylesheet" />
+    <link href="_content/BulletBars/styles.css" rel="stylesheet" />
+
 </head>
 
 <body>
