--- a/Blazor-Dashboard/wwwroot/indexx.html
+++ b/Blazor-Dashboard/wwwroot/indexx.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>testproject</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
@@ -23,3 +23,4 @@
 </body>
 
 </html>
+
